app/styles/_dialogs.scss
.dialogBoxBg {
    width: 100%;
    height: 100%;
    background: $COSMOUI_DIALOG_BACKGROUND;
    overflow: hidden;
    position: fixed;
    top: 80px;
    left: 0px;
    opacity: 0;
    z-index: 9995;
}

.dialogBox {
    z-index: 9996;
    border: 2px solid $COSMOUI_DIALOG_BORDER_COLOR;
    border-radius: 4px;
    box-shadow: 0px 0px 5px $COSMOUI_DIALOG_SHADOW_COLOR;
    background: $COSMOUI_DIALOG_BACKGROUND;
    overflow-x: hidden;

    .dialogButton {
        color: white;
        font-weight: bold;
        padding: 5px 10px 5px 10px;
        margin: 0px 10px 0px 10px;
        background-color: $COSMOUI_BUTTON_BACKGROUND;
        border-radius: 3px;
        border-bottom: 1px solid $COSMOUI_BUTTON_BOTTOM_BORDER_COLOR;
        border-right: 1px solid $COSMOUI_BUTTON_RIGHT_BORDER_COLOR;
        border-top: none;
        border-left: none;

        &.disabled {
            background: $COSMOUI_BUTTON_DISABLED_BACKGROUND;
            border-bottom: 1px solid $COSMOUI_BUTTON_DISABLED_BORDER_COLOR;
            border-right: 1px solid $COSMOUI_BUTTON_DISABLED_BORDER_COLOR;
            color: $COSMOUI_BUTTON_DISABLED_BORDER_COLOR;
            cursor: default;
        }

        &.enabled {
            background: $COSMOUI_BUTTON_BACKGROUND;
            cursor: pointer;
        }

        &.loader {
            color: transparent;
            background-image: url($img-loading-button);
            background-repeat: no-repeat;
            background-position: center center;
        }

        &.dialogClose {
            float: right;
            position: absolute;
            right: 0px;
            top: 11px;
            background: url("/images/x_idle.png") no-repeat center center;
            width: 32px;
            height: 32px;
            cursor: pointer;
            background-color: transparent;
            border: none;
            padding-right: 0px;

            &:hover {
                background: url("/images/x_hover.png") no-repeat center center;
            }

            &:active {
                background: url("/images/x_pressed.png") no-repeat center center;
            }

            &.disabled {
                background: url("/images/x_idle.png") no-repeat center center;
            }
        }
    }

    .dialogTitle {
        display: block;
        width: 100%;
        height: 51px;
        color: $COSMOUI_DIALOG_TITLE_COLOR;
        line-height: 31px;
        font-size: 26px;
        padding-left: 20px;
        padding-top: 10px;
        background-color: $clr-base-00;

        label {
            width: 90%;
            height: 100%;
            text-overflow: ellipsis;
            white-space: nowrap;
            overflow: hidden;
        }
    }

    .dialogDeploymentName {
        position: relative;
        width: 100%;
        text-align: center;
        margin: 0 0 15px;

        input {
            position: relative;
            width: 310px;
            border-radius: 3px;
            padding-left: 10px;
            background-clip: padding-box;
            background-color: $clr-base-30;
            border: 0;
            padding: 5px 10px;
            line-height: 22px;
        }
    }

    .dialogDescription {
        display: block;
        width: 100%;
        text-align: center;
        font-size: 16px;
        font-family: 'OpenSansRegular';
        margin: 15px 0;
    }

    .dialogInputs {
      position: relative;
      padding-left: 20px;
      text-align: left;

      &.deployInputs {
          width: 330px;
      }

      &.executeInputs {
          width: 405px;
      }

      .buttons-group {
        margin-left: 92px;
        margin-bottom: 10px;

        &.deployBtns {
          margin-left: 52px;
        }

        &.executeBtns {
          margin-left: 92px;
        }

        button {
          min-width: 100px;
        }
      }

      ul {
        list-style-type: none;

        input {
          position: relative;
          border-radius: 3px;
          margin-top: 5px;
          background-clip: padding-box;
          background-color: $clr-base-30;
          border: 0;
          right: 5px;
          float: right;
          width: 50%;
          padding: 5px 10px;
          line-height: 20px;
        }
      }

      textarea {
        width: 100%;
        height: 150px;
        line-height: normal;
      }

    }

    .error-message {
        display: block;
        color: $clr-base-26;
        margin: 10px 0;
        padding: 10px 20px;
        word-break: normal;
        background-color: #f5f5f5;
        max-height: 300px;
        overflow-y: auto;
    }

    .buttonsContainer {
        display: block;
        text-align: center;
    }
}

#uploadDialogContainer {
    width: 430px;
    position: fixed;
    top: 80px;
    left: 0;
    right: 0;
    margin: auto;
    margin-top: 100px;

    #uploadForm {
        position: relative;
        display: block;

        #browse {
            display: block;
            height: 33px;

            #fileInput {
                top: 0px;
                position: absolute;
                opacity: 0;
                left: 20px;
                z-index: 9998;
                width: 390px;
                height: 35px;
            }

            #browseBtn {
                position: absolute;
                top: 0px;
                right: 12px;
                height: 32px;
                font-size: 30px;
                padding: 0px 8px 0px 7px;
                line-height: 33px;
                cursor: pointer;
            }

            #browseTxt {
                position: absolute;
                top: 0px;
                left: 20px;
                width: 340px;
                height: 32px;
                border-radius: 3px;
                padding-left: 10px;
                background-clip: padding-box;
                background-color: $clr-base-10;
                border: 0;
            }
        }

        #name {
            display: block;
            position: relative;
            top: 15px;
            height: 50px;
            input {
                position: relative;
                left: 20px;
                width: 385px;
                height: 32px;
                border-radius: 3px;
                padding-left: 10px;
                background-clip: padding-box;
                background-color: $clr-base-10;
                border: 0;
            }
        }

        #mainFile {
            position: relative;
            float: left;
            left: 120px;
            top: 63px;

            #mainYamlName {
                width: 272px;
                height: 30px;
                border-radius: 5px;
                margin-left: 10px;
            }
        }

        .upload-process-anim {
            width: 25px;
            height: 25px;
            background: url("/images/progress.gif") no-repeat center center;
            background-color: $clr-base-01;
            border-radius: 25px;
            position: absolute;
            right: 81px;
            bottom: 13px;
        }

        #uploadBtn {
            position: relative;
            margin: 10px 0;
            left: 355px;
        }

        #upload-error-message {
            display: block;
            color: $clr-base-26;
            margin: 10px 0 0;
            padding: 10px 20px;
            word-break: normal;
            background-color: #f5f5f5;
            max-height: 300px;
            overflow-y: auto;
        }
    }
}

#deployDialogContainer {
    width: 350px;
    position: fixed;
    top: 80px;
    left: 0;
    right: 0;
    margin: auto;
    margin-top: 100px;
    line-height: 40px;

    #deploy-error-message {
        display: block;
        color: $clr-base-26;
        margin: 10px 0px;
        padding: 10px 20px;
        background-color: #f5f5f5;
        max-height: 300px;
        overflow-y: auto;
    }

    .deployButtons {
        margin: 10px 0;
        line-height: 20px;
    }
}

#confirmationDialogContainer {
    position: fixed;
    top: 80px;
    left: 0;
    right: 0;
    width: 430px;
    margin: auto;
    margin-top: 100px;
    line-height: 40px;

    .dialogDescription {
        font-size: 20px;
        padding-right: 50px;
        padding-left: 50px;
        line-height: 28px;
        color: $clr-base-00;
    }

    .confirmationButtons {
        margin: 15px 0;
        line-height: 20px;

        #cancelBtn {
            color: $COSMOUI_BUTTON_BACKGROUND;
            font-weight: bold;
            padding: 5px 10px 5px 10px;
            margin: 0px 10px 0px 10px;
            background-color: $clr-base-10;
            border-bottom: 1px solid $COSMOUI_BUTTON_BACKGROUND;
            border-right: 1px solid $COSMOUI_BUTTON_BACKGROUND;
        }
    }
}

#deleteDeploymentDialog, #deleteBlueprintDialog {
    width: 450px;
    position: fixed;
    top: 80px;
    left: 0;
    right: 0;
    margin: auto;
    margin-top: 100px;

    .dialogClose {
        top: 11px;
    }

    .dialogDescription {
        display: block;
        font-size: 20px;
        line-height: 28px;
        margin: 10px 0 0;
        text-align: left;
        padding: 0 20px;
        height: auto;
        color: $clr-base-00;
    }

    .dialogCheckbox {
        float: left;
        display: inline-block;
        margin: 3px 0 0 20px;
        label {
            cursor: pointer;
        }
    }

    .errorMessage {
        display: block;
        color: $clr-base-26;
        margin: 10px 0;
        padding: 10px 20px;
        word-break: normal;
        background-color: #f5f5f5;
        max-height: 300px;
        overflow-y: auto;
    }

    .confirmationButtons {
        display: block;
        text-align: right;
        margin: 10px 0;

        #cancelBtnDelDep {
            display: inline-block;
            color: $COSMOUI_BUTTON_BACKGROUND;
            font-weight: bold;
            padding: 5px 10px 5px 10px;
            margin: 0px 0px 0px 10px;
            background-color: $clr-base-10;
            border-bottom: 1px solid $COSMOUI_BUTTON_BACKGROUND;
            border-right: 1px solid $COSMOUI_BUTTON_BACKGROUND;

            &.disabled {
              background: $COSMOUI_BUTTON_DISABLED_BACKGROUND;
              border-bottom: 1px solid $COSMOUI_BUTTON_DISABLED_BORDER_COLOR;
              border-right: 1px solid $COSMOUI_BUTTON_DISABLED_BORDER_COLOR;
              color: $clr-base-24;
              cursor: default;
            }
        }
    }
}

